# all_work_done

./: przeciecia.c  stos.c  trojmian.c
Dron/: Dron  Makefile  obroty_3D
Dron/inc/: Dron_i_jego_czesci.hh  Elem_krajobrazu.hh  Interfejsy.hh  Macierz.hh  Scena.hh  Wektor.hh
Dron/src/: Dron_i_jego_czesci.cpp  Elem_krajobrazu.cpp  Macierz.cpp  Scena.cpp  Wektor.cpp  main.cpp
Graph/: CMakeLists.txt  djikstra.cpp  djikstra.h  graph.cpp  graph.h  main.cpp
Graph_list/: CMakeLists.txt  lgraph.cpp  lgraph.h  main.cpp
Learning1/: main.py
TicTacToe/: AI.cpp  AI.h  CMakeLists.txt  gameHandling.cpp  gameHandling.h  gameUI.cpp  gameUI.h  main.cpp
lamanie_hasel/: hash.txt  hasla.cpp  sprawozdanie.md  zad
obrazy2final/: obrazy2final.tar.uu  usersKacper
obrazyfolder/: a.out  obrazyproba.c  obrazyproba.c~
skrypty_lab2/: data.sh  find.sh  mail.sh  petla.sh  policz.sh  sprawozdanie.md
